<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".view.ui.auth.LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:navigationIconTint="@color/md_theme_onSurface"
            app:title="@string/login"
            app:titleCentered="true" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingHorizontal="32dp"
            android:paddingTop="32dp"
            android:paddingBottom="@dimen/bottom_padding">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.3" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_login"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_max="488dp"
                app:srcCompat="@drawable/src_login_img" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_login_body"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:text="@string/desc_login"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_login"
                app:layout_constraintWidth_max="488dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_login_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:paddingHorizontal="4dp"
                android:paddingVertical="8dp"
                android:text="@string/email"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_login_body"
                app:layout_constraintWidth_max="488dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_login_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingHorizontal="4dp"
                android:paddingVertical="8dp"
                android:text="@string/password"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ed_login_email"
                app:layout_constraintWidth_max="488dp" />

            <com.rahman.storyapp.view.custom.CustomEditText
                android:id="@+id/ed_login_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableTint="@color/icon_colorstate"
                android:hint="@string/insert_email"
                android:inputType="text|textEmailAddress"
                app:customInputType="email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_login_email"
                app:layout_constraintWidth_max="488dp" />

            <com.rahman.storyapp.view.custom.CustomEditText
                android:id="@+id/ed_login_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableTint="@color/icon_colorstate"
                android:hint="@string/insert_password"
                android:inputType="text|textPassword"
                app:customInputType="password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_login_password"
                app:layout_constraintWidth_max="488dp" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cb_show_pass_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/show_password"
                app:layout_constraintStart_toStartOf="@+id/ed_login_password"
                app:layout_constraintTop_toBottomOf="@+id/ed_login_password" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/action_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/login_now"
                app:layout_constraintEnd_toEndOf="@+id/ed_login_password"
                app:layout_constraintTop_toBottomOf="@+id/cb_show_pass_login" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/login_progressbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:indeterminate="true"
        app:layout_anchor="@id/app_bar_login"
        app:layout_anchorGravity="bottom" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>