<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_maps"
        android:icon="@drawable/icon_map_24px"
        android:title="@string/find_stories"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/icon_logout_24px"
        android:title="@string/logout"
        app:showAsAction="ifRoom" />
</menu>